Fix overflowing CSS on mobile

--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
 	padding: 0;
 }
 
+html {
+	max-width: 100vw;
+	max-height: 100vh;
+}
+
 body {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 500;
@@ -17,9 +22,10 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	min-height: 100vh;
+	height: 100vh;
 	/* min-width: 100vh; */
 	color: #fff;
+	overflow: hidden;
 }
 
 .container {
@@ -112,6 +118,7 @@ body {
 	transition: all 250ms ease-in-out;
 }
 
+/* Responsive stuff */
 @media screen and (max-width: 600px) {
   .container {
   	flex-direction: column;
@@ -119,5 +126,17 @@ body {
 
   .col-left, .col-right {
   	text-align: center;
+  }
+
+  .col-left {
+  	margin-bottom: 2rem;
+  }
+
+  #image {
+  	max-width: 75%;
+  	max-height: 80%;
+  	top: 50%;
+  	left: 50%;
+  	transform: translateX(-50%) translateY(-50%);
   }
 }
